# OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
.github/workflows/: cpplint.yml  test.yml
FractalVisualizer/: imgui.ini  premake5.lua
FractalVisualizer/assets/: julia.glsl  mandelbrot.glsl  mandelbrot_fast.glsl
FractalVisualizer/assets/colors/: cycle.glsl  cycle1.glsl  cycle2.glsl  gay.glsl  gradient.glsl  trans.glsl
FractalVisualizer/src/: ColorFunction.cpp  ColorFunction.h  FractalApp.cpp  FractalLayer.cpp  FractalLayer.h  FractalVisualizer.cpp  FractalVisualizer.h  MainLayer.cpp  MainLayer.h
OpenGL-Core/: CMakeLists.txt  premake5.lua
OpenGL-Core/src/: GLCore.h  GLCoreUtils.h  glpch.cpp  glpch.h
OpenGL-Core/src/GLCore/Core/: Application.cpp  Application.h  Core.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.h
OpenGL-Core/src/GLCore/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
OpenGL-Core/src/GLCore/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
OpenGL-Core/src/GLCore/Util/: OpenGLDebug.cpp  OpenGLDebug.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Shader.cpp  Shader.h  TextureUtils.cpp  TextureUtils.h
OpenGL-Core/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
OpenGL-Core/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
OpenGL-Examples/: CMakeLists.txt  premake5.lua
OpenGL-Examples/assets/shaders/: test.frag.glsl  test.vert.glsl
OpenGL-Examples/src/: ExampleApp.cpp  ExampleLayer.cpp  ExampleLayer.h
OpenGL-Sandbox/: imgui.ini  premake5.lua
OpenGL-Sandbox/src/: Mesh.cpp  Mesh.h  SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h
OpenGL-Tests/: premake5.lua
OpenGL-Tests/src/: mesh_test.cpp  run.cpp
scripts/: Linux-Premake.sh  Linux-RunSandbox.sh  Win-Premake.bat
